/*
 * $Id: ChangeLog,v 1.1157 2013-09-25 00:03:45 fyurisich Exp $
 */
/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2013-09-24 21:03 UTC-0300 Fernando Yurisich <fyurisich@oohg.org>
   * source/h_grid.prg
   * source/h_xbrowse.prg
     ! COLUMNCONTROLS clause in XBRowse is ignored.

2013-09-23 21:10 UTC-0300 Fernando Yurisich <fyurisich@oohg.org>
   * source/h_grid.prg
   * source/h_xbrowse.prg
     ! RTE at TXBROWSE:REFRESHROW(375) when an XBrowse is defined
       inside a Tab.

2013-09-23 20:02 UTC-0300 Fernando Yurisich <fyurisich@oohg.org>
   + source/c_gdiplus.c
     * Missing in previous commit.
   * ./Changelog
     * Previous entry corrected.

2013-09-22 23:20 UTC-0300 Fernando Yurisich <fyurisich@oohg.org>
   * source/c_image.c
     + Function _OOHG_SIZEOFHBITMAP.
   * source/h_msgbox.prg
     + Static _OOHG_OneItemPerLine.
     + Function SetOneArrayItemPerLine, when .T. function AutoType
       will show items in separated lines.
     * Function AutoType.
     * Minor formatting.
   + source/c_gdiplus.c
     + Support for saving a BMP as JPEG, PNG and TIFF.
       Borrowed from HMG Extended Gdiplus sample.
   * source/common_make.bat
   * source/makelib_mingw.bat
   * source/oohg.hbp
     + c_gdiplus.c
   * source/h_pdf.prg
     ; TODO: TIFF files are not shown correctly.
   * source/h_windows.prg
     + Support for JPEG, PNG and TIFF formats in methods SaveAs
       and Print.
     ; Use SaveAs( cFile, lAll, cType, nQuality ).
       Use Print( nFRow, nFCol, nTRow, nTCol, lAll, cType, nQuality ).
       nFRow == from row.
       nFCol == from col.
       nTRow == to row.
       nTCol == to col.
       cFile == name of the file to create.
       lAll == .T. to save the whole window, .F. to save the
               windows's client area only.
       cType == "BMP", "JPG", "JPEG", "TIF", "TIFF" or "PNG".