@@ -1,11 +1,17 @@
 /*
- * $Id: ChangeLog,v 1.1157 2013-09-25 00:03:45 fyurisich Exp $
+ * $Id: ChangeLog,v 1.1158 2013-09-25 23:12:03 fyurisich Exp $
  */
 /* Use this format for the entry headers:
    YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2013-09-25 20:11 UTC-0300 Fernando Yurisich <fyurisich@oohg.org>
+   + source/c_gdiplus.c
+     ! Compilation under xHarbour and BCC.
+   * ./compile_bcc.bat
+     ! No EXE is generated because RTL.LIB wasn't found.
 
 2013-09-24 21:03 UTC-0300 Fernando Yurisich <fyurisich@oohg.org>
    * source/h_grid.prg
